# natx

./: pyproject.toml  setup.py
.github/workflows/: publish.yml
src/natx/: __init__.py  __main__.py  natx.py  natx.py.bak
src/natx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
