[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "natx"
version = "0.1.2"
description = "Project natx by septianhdnatta"
license = {text = "MIT"}
authors = [{name = "septianhdnatta", email = "septianhdnatta@example.com"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
natx = "natx:main"
