[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "natx"
version = "0.2.0"
description = "Natx by septianhdnatta"
license = {text = "MIT"}
authors = [{name = "septianhdnatta", email = "septianhdnatta@example.com"}]
dependencies = [
    "colorama",
    "requests",
    "pycryptodome",
    "urllib3",
    "cfonts"
]

[tool.setuptools.packages.find]
where = ["src"]
